--- a/style.css
+++ b/style.css
@@ -9,10 +9,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 3rem;
+    text-align: center;
 }
 
 a {
@@ -23,26 +26,26 @@ a {
 
 h2 {
     text-shadow: 2px 2px #00aeff;
-    margin: 0 20px;
-    font-size: 32px;
+    font-size: 2rem;
+    text-align: center;
 }
 
 .wrapper {
     text-align: center;
-    width: 400px;
+    width: 90%;
     max-width: 768px;
     padding: 20px;
 }
 
 .boxes {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    margin: auto;
-    font-size: 60px;
     color: #fff;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 16px;
-    margin: 20px 0px;
+    margin: 20px 0;
+    padding: 10px;
 }
 
 .box {
@@ -50,9 +53,13 @@ h2 {
     height: 70px;
     border: 3px solid #fff;
     border-radius: 10px;
-    margin: 10px 10px;
+    margin: 10px;
+    font-size: 3rem;
     text-shadow: 2px 2px #00aeff;
     box-shadow: 2px 2px #00aeff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .keyboard {
@@ -69,11 +76,29 @@ h2 {
 .keyboard-button {
     width: 40px;
     height: 40px;
-    font-size: 18px;
+    font-size: 1rem;
     border: 1px solid #fff;
     border-radius: 3px;
     margin: 0 3px;
     cursor: pointer;
     text-shadow: 2px 2px #00aeff;
     box-shadow: 2px 2px #00aeff;
+}
+
+@media (max-width: 768px) {
+    .wrapper {
+        width: 95%;
+    }
+
+    .box {
+        width: 50px;
+        height: 50px;
+        font-size: 2rem;
+    }
+
+    .keyboard-button {
+        width: 30px;
+        height: 30px;
+        font-size: 0.8rem;
+    }
 }
