--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h2 {
 
 .keyboard-button {
     width: 40px;
-    height: 40px;
+    height: 50px;
     font-size: 1rem;
     border: 1px solid #fff;
     border-radius: 3px;
@@ -83,6 +83,16 @@ h2 {
     cursor: pointer;
     text-shadow: 2px 2px #00aeff;
     box-shadow: 2px 2px #00aeff;
+}
+
+.delete {
+    background-color: #ff8b8b;
+    width: 90px
+}
+
+.enter {
+    background-color: #7eff42;
+    width: 120px;
 }
 
 @media (max-width: 768px) {
@@ -98,7 +108,43 @@ h2 {
 
     .keyboard-button {
         width: 30px;
+        height: 40px;
+        font-size: 0.8rem;
+    }
+
+    .delete {
+        background-color: #ff8b8b;
+        width: 60px;
+    }
+
+    .enter {
+        width: 80px;
+    }
+}
+
+@media (max-width: 440px) {
+    .wrapper {
+        width: 90%;
+    }
+
+    .box {
+        width: 40px;
+        height: 40px;
+        font-size: 1.5rem;
+    }
+
+    .keyboard-button {
+        width: 22px;
         height: 30px;
         font-size: 0.8rem;
+    }
+
+    .delete {
+        background-color: #ff8b8b;
+        width: 32px;
+    }
+
+    .enter {
+        width: 60px;
     }
 }
