--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    background: linear-gradient(320deg, #984200, #ff5e00, #d76400);
+    background: #131313;
     color: white;
     display: flex;
     justify-content: center;
@@ -13,9 +13,26 @@ body {
     padding: 0;
 }
 
-h1 {
-    font-size: 3rem;
-    text-align: center;
+.top-nav {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    margin: 20px 0;
+}
+
+.top-nav a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    text-shadow: 2px 2px #00aeff;
+    margin: 0 20px;
+}
+
+.top-nav h1 {
+    font-size: 50px;
+    margin: 0;
+    width: 250px;
 }
 
 a {
@@ -24,37 +41,39 @@ a {
     text-shadow: 2px 2px #00aeff;
 }
 
+a i {
+    margin: 0px 20px;
+}
+
 h2 {
     text-shadow: 2px 2px #00aeff;
-    font-size: 2rem;
-    text-align: center;
+    margin: 0 20px;
+    font-size: 32px;
 }
 
 .wrapper {
     text-align: center;
-    width: 90%;
-    max-width: 768px;
-    padding: 20px;
+    width: 500px;
+    margin: 0 20px;
 }
 
 .boxes {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    font-size: 60px;
     color: #fff;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.05);
     border-radius: 16px;
-    margin: 20px 0;
-    padding: 10px;
+    margin: 20px auto;
+    padding: 9px;
 }
 
 .box {
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     border: 3px solid #fff;
     border-radius: 10px;
-    margin: 10px;
-    font-size: 3rem;
+    margin: 0 5px;
     text-shadow: 2px 2px #00aeff;
     box-shadow: 2px 2px #00aeff;
     display: flex;
@@ -71,12 +90,14 @@ h2 {
 .row {
     display: flex;
     margin: 5px 0;
+    margin-top: 0;
 }
 
 .keyboard-button {
     width: 40px;
-    height: 50px;
+    height: 55px;
     font-size: 1rem;
+    font-weight: bold;
     border: 1px solid #fff;
     border-radius: 3px;
     margin: 0 3px;
@@ -86,65 +107,35 @@ h2 {
 }
 
 .delete {
-    background-color: #ff8b8b;
-    width: 90px
+    background-color: rgb(255, 100, 100);
+    width: 70px
 }
 
 .enter {
-    background-color: #7eff42;
-    width: 120px;
+    background-color: rgb(75, 190, 75);
+    width: 100px;
 }
 
-@media (max-width: 768px) {
-    .wrapper {
-        width: 95%;
-    }
-
-    .box {
-        width: 50px;
-        height: 50px;
-        font-size: 2rem;
-    }
-
-    .keyboard-button {
-        width: 30px;
-        height: 40px;
-        font-size: 0.8rem;
-    }
-
-    .delete {
-        background-color: #ff8b8b;
-        width: 60px;
-    }
-
-    .enter {
-        width: 80px;
+@media (max-width: 500px) {
+    h1 {
+        margin: 40px 30px;
     }
 }
 
-@media (max-width: 440px) {
-    .wrapper {
-        width: 90%;
+@media (max-width: 400px) {
+    .dice {
+        font-size: 55px;
     }
-
-    .box {
-        width: 40px;
-        height: 40px;
-        font-size: 1.5rem;
+    h1 {
+        margin: 40px 10px;
     }
+}
 
-    .keyboard-button {
-        width: 22px;
-        height: 30px;
-        font-size: 0.8rem;
+@media (max-width: 375px) {
+    .dice {
+        font-size: 50px;
     }
-
-    .delete {
-        background-color: #ff8b8b;
-        width: 32px;
-    }
-
-    .enter {
-        width: 60px;
+    h1 {
+        margin: 40px 0px;
     }
 }
