--- a/style.css
+++ b/style.css
@@ -15,24 +15,23 @@ body {
 
 .top-nav {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     font-size: 20px;
-    margin: 20px 0;
+    margin: 20px;
 }
 
 .top-nav a {
     display: flex;
-    align-items: center;
     text-decoration: none;
     color: #fff;
     text-shadow: 2px 2px #00aeff;
-    margin: 0 20px;
 }
 
 .top-nav h1 {
     font-size: 50px;
     margin: 0;
-    width: 250px;
+    width: 240px;
 }
 
 a {
@@ -42,7 +41,7 @@ a {
 }
 
 a i {
-    margin: 0px 20px;
+    margin: 5px 15px;
 }
 
 h2 {
@@ -50,6 +49,8 @@ h2 {
     margin: 0 20px;
     font-size: 32px;
 }
+
+
 
 .wrapper {
     text-align: center;
@@ -68,7 +69,7 @@ h2 {
     padding: 9px;
 }
 
-.box {
+#box {
     width: 60px;
     height: 60px;
     border: 3px solid #fff;
@@ -117,25 +118,31 @@ h2 {
 }
 
 @media (max-width: 500px) {
-    h1 {
-        margin: 40px 30px;
+    .top-nav h1 {
+        font-size: 46px;
+        width: 220px;
+    }
+    h2 {
+        font-size: 28px;
     }
 }
 
 @media (max-width: 400px) {
-    .dice {
-        font-size: 55px;
+    .top-nav h1 {
+        font-size: 42px;
+        width: 200px;
     }
-    h1 {
-        margin: 40px 10px;
+    h2 {
+        font-size: 24px;
     }
 }
 
 @media (max-width: 375px) {
-    .dice {
-        font-size: 50px;
+    .top-nav h1 {
+        font-size: 40px;
+        width: 190px;
     }
-    h1 {
-        margin: 40px 0px;
+    h2 {
+        font-size: 22px;
     }
 }
